Implemented setup listing; added front-end code

--- a/views/details.hbs
+++ b/views/details.hbs
@@ -3,7 +3,7 @@
 <img class="cube" src="/static/assets/{{imageUrl}}">
 <div class="details">
   <p><span>Description:</span> {{description}}</p>
-  <p><span>Esthetics Score:</span> {{estheticsScore}}</p>
+  <p><span>Price Estimate:</span> {{price}}</p>
   <a class="btn" href="/">Back</a>
 </div>
 {{/with}}
