--- a/static/css/site.css
+++ b/static/css/site.css
@@ -72,8 +72,9 @@ div.cube {
     display: inline-block;
     border: 1px solid #2b415433;
     background: white;
-    width: 23%;
+    width: 400px;
     vertical-align: top;
+
 }
 
 div.cube:hover p.name {
@@ -88,6 +89,7 @@ p.name {
     text-transform: uppercase;
     padding: 10px;
     border-bottom: 1px solid #2b415433;
+    height: 60px;
 }
 
 button, main a.btn {
@@ -199,7 +201,7 @@ input[type=submit]:hover {
 div.form {
     border-radius: 5px;
     padding: 20px;
-    width: 36%;
+    width: 300px;
     margin: auto;
 }
 
@@ -259,4 +261,12 @@ footer {
     to {
         opacity: 0;
     }
+}
+
+.description {
+    display: none;
+}
+
+.description p {
+    margin: 30px;
 }
