--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,6 +1,6 @@
-<h1>Post Desk Setup</h1>
+<h1>Edit Desk Setup</h1>
 <div class="form">
-  <form action="/create" method="POST">
+  <form action="/edit" method="Put">
     <label for="name">Name</label>
     <input type="text" id="name" name="name">
     <label for="name">Description</label>
