--- a/views/partials/setupCard.hbs
+++ b/views/partials/setupCard.hbs
@@ -2,6 +2,8 @@
   <img class="cube"
     src="/static/assets/{{imageUrl}}">
   <p class="name">{{name}}</p>
-  <p><span>Esthetics Score:</span> {{estheticsScore}}</p>
+  <p><span>Price Estimate:</span> {{price}}</p>
   <a class="btn" href="/details/{{id}}">Details</a>
+  <button class="btn more">Show More</button>
+  <div class="description"><p>{{description}}</p></div>
 </div>
