--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,14 +1,16 @@
 <h1>Edit Desk Setup</h1>
 <div class="form">
-  <form action="/edit" method="Put">
+  {{#with setup}}
+  <form action="/edit/{{id}}" method="Post">
     <label for="name">Name</label>
-    <input type="text" id="name" name="name">
+    <input type="text" id="name" name="name" value="{{name}}">
     <label for="name">Description</label>
-    <textarea id="name" name="description"></textarea>
+    <textarea id="name" name="description">{{description}}</textarea>
     <label for="image">ImageUrl</label>
-    <input type="text" id="image" name="imageUrl">
+    <input type="text" id="image" name="imageUrl" value="{{imageUrl}}">
     <label for="price">Price Estimate</label>
-    <input id="price" name="price" type="number">
-    <input type="submit" value="Post">
+    <input id="price" name="price" type="number" value="{{price}}">
+    <input type="submit" value="Save">
   </form>
+  {{/with}}
 </div>
