--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,11 +15,12 @@
         <li><img class="logo" src="/static/images/logo.png"></li>
         <li><a href="/">Browse</a></li>
         <li><a href="/create">Post Desk Setup</a></li>
+        <li><a href="/peripheral">Add Peripheral</a></li>
         <li><a href="/about">About</a></li>
       </ul>
     </header>
     <main>
-      
+
       {{{body}}}
 
     </main>
